tutorials/solution/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: podinfo
  name: podinfo
  namespace: demo
spec:
  ports:
  - name: 80-9898
    port: 80
    protocol: TCP
    targetPort: 9898
  selector:
    app: podinfo
  type: ClusterIP
