tutorials/solution/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: podinfo
  namespace: demo
spec:
  rules:
  - host: podinfo.cluster-XX.workshopctl.kubernetesfinland.com
    http:
      paths:
      - path: /podinfo
        backend:
          serviceName: podinfo
          servicePort: 80
